--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "M.K.",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^25.4.0",
     "nodemon": "^2.0.3"
   },
   "dependencies": {
@@ -18,5 +19,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.9"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
