--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "test": "jest --verbose"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=TEST jest --verbose --runInBand",
+    "start:test": "cross-env NODE_ENV=TEST node index.js",
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint .",
+    "deploy": "git push heroku master"
   },
   "author": "M.K.",
   "license": "ISC",
@@ -18,6 +22,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
